--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,14 +1,155 @@
+/****************************************************************************************************************/
+/*********************************************** Table Of Contents **********************************************/
+/****************************************************************************************************************/
+
+/* 1. Fonts */
+/* 2. Root */
+/* 3. Couch-Mint/Theme */
+/* 4. Home Page */
+/* 5. Links */
+/* 6. Header/Nav */
+
+/****************************************************************************************************************/
+/*********************************************** Fonts **********************************************************/
+/****************************************************************************************************************/
+
+@font-face {
+  font-family: 'Aliens And Cows';
+  src: url('AlienCow.ttf');
+  font-display: swap;
+}
+
+.couch-mint__aliens-and-cows {
+  font-family: 'Aliens And Cows', system-ui;
+}
+
+@font-face {
+  font-family: 'Highrise Regular';
+  src: url('HighRiseRegular.otf');
+  font-display: swap;
+}
+
+.couch-mint__highrise-regular {
+  font-family: 'Highrise Regular', system-ui;
+}
+
+@font-face {
+  font-family: 'Highrise Bold';
+  src: url('HighRiseBold.otf');
+  font-display: swap;
+}
+
+.couch-mint__highrise-bold {
+  font-family: 'Highrise Bold', system-ui;
+}
+
+@font-face {
+  font-family: 'Highrise Condensed';
+  src: url('HighRiseCond.otf');
+  font-display: swap;
+}
+
+.couch-mint__highrise-condensed {
+  font-family: 'Highrise Condensed', system-ui;
+}
+
+@font-face {
+  font-family: 'Modern Sans';
+  src: url('ModernSans.otf');
+  font-display: swap;
+}
+
+.couch-mint__modern-sans {
+  font-family: 'Modern Sans', system-ui;
+}
+
+@font-face {
+  font-family: 'Newake';
+  src: url('Newake.otf');
+  font-display: swap;
+}
+
+.couch-mint__newake {
+  font-family: 'Newake', system-ui;
+}
+
+/****************************************************************************************************************/
+/*********************************************** Root ***********************************************************/
+/****************************************************************************************************************/
+:root {
+  --dark-background-100: #0d1b2a;
+  --dark-background-200: #1b263b;
+  --dark-option-100: #e0e1dd;
+  --dark-option-200: #778da9;
+  --dark-option-300: #415a77;
+
+  --light-background-100: #e0e1dd;
+  --light-background-200: #778da9;
+  --light-option-100: #0d1b2a;
+  --light-option-200: #1b263b;
+  --light-option-300: #415a77;
+
+  --alt-background-100: #2f3e46;
+  --alt-background-200: #354f52;
+  --alt-option-100: #cad2c5;
+  --alt-option-200: #84a98c;
+  --alt-option-300: #52796f;
+}
+
 html,
 body {
-  font-family: 'Lora', serif;
+  font-family: system-ui;
 
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 
   overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+* {
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+*::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+
+#app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-width: 100vw;
+  height: 100vh;
+  flex-grow: 1;
+  overflow-x: hidden;
   overflow-y: scroll;
 }
+
+#app[data-theme='light'] {
+  background-color: var(--light-background-100);
+  color: var(--light-option-100);
+}
+
+#app[data-theme='dark'] {
+  background-color: var(--dark-background-100);
+  color: var(--dark-option-100);
+}
+
+#app[data-theme='alt'] {
+  background-color: var(--alt-background-200);
+  color: var(--alt-option-100);
+}
+
+/****************************************************************************************************************/
+/*********************************************** @Couch-Mint/Theme **********************************************/
+/****************************************************************************************************************/
 
 #couch-mint__theme {
   min-height: 100vh;
@@ -16,9 +157,372 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 32px;
+  max-width: 1024px;
 }
 
-#couch-mint__theme[data-mode='light'] {
-  background-color: #fff;
-  color: #000;
+#couch-mint__theme-toggle {
+  position: fixed;
+  bottom: 10vh;
+  right: 5vh;
+
+  width: 220px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+
+  border-radius: 20px;
+  border: 2px solid black;
+
+  box-sizing: border-box;
+  padding: 8px;
+
+  background-color: var(--light-background-200);
+}
+
+/****************************************************************************************************************/
+/*********************************************** Home Page ******************************************************/
+/****************************************************************************************************************/
+
+.couch-mint__home-page-body-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  height: 100%;
+  width: fit-content;
+  max-width: 712px;
+}
+
+.couch-mint__home-page-text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 16px;
+  text-align: left;
+}
+
+.couch-mint__home-page-title-text {
+  font-size: 56px;
+  letter-spacing: 0.04em;
+}
+
+.couch-mint__home-page-subtitle-text {
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  line-height: 1.15;
+  font-weight: 600;
+}
+
+/****************************************************************************************************************/
+/*********************************************** Links **********************************************************/
+/****************************************************************************************************************/
+
+.link {
+  font-family: 'Newake';
+  font-weight: 300;
+  text-decoration: underline;
+  letter-spacing: 0.04em;
+  line-height: 1.15;
+}
+
+#app[data-theme='light'] .link {
+  color: var(--light-option-300);
+}
+
+#app[data-theme='light'] .link:focus {
+  color: var(--light-option-200);
+}
+
+#app[data-theme='light'] .link:active {
+  color: var(--light-option-100);
+}
+
+#app[data-theme='dark'] .link {
+  color: var(--dark-option-200);
+}
+
+#app[data-theme='light'] .link:focus {
+  color: var(--light-option-200);
+}
+
+#app[data-theme='light'] .link:active {
+  color: var(--light-option-100);
+}
+
+/****************************************************************************************************************/
+/*********************************************** Header/Nav *****************************************************/
+/****************************************************************************************************************/
+
+.couch-mint__header-container {
+  width: 100%;
+  height: 72px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  box-sizing: border-box;
+  margin: 0;
+}
+
+.couch-mint__header-home-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 12px;
+}
+
+.couch-mint__header-home-container span {
+  font-size: 30px;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  line-height: 1.15;
+  vertical-align: middle;
+  text-align: center;
+  margin-block-end: 0px;
+  margin-block-start: 6px;
+}
+
+.couch-mint__header-link-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 12px;
+  cursor: pointer;
+}
+
+.couch-mint__theme-toggle-active {
+  font-weight: 700;
+  text-decoration: underline;
+}
+
+.couch-mint__header-theme-toggle {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  box-sizing: border-box;
+  padding: 4px;
+  width: 144px;
+  height: 36px;
+}
+
+#app[data-theme='light'] .couch-mint__header-theme-toggle {
+  background-color: var(--light-background-200);
+  border: 1.25px solid var(--light-option-100);
+  color: var(--light-background-100);
+  border-radius: 40px;
+}
+
+#app[data-theme='dark'] .couch-mint__header-theme-toggle {
+  background-color: var(--light-background-200);
+  border: 1.25px solid var(--light-background-100);
+  color: var(--light-background-100);
+  border-radius: 40px;
+}
+
+#app[data-theme='alt'] .couch-mint__header-theme-toggle {
+  background-color: var(--alt-option-100);
+  border: 1.25px solid var(--alt-background-200);
+  color: var(--alt-option-300);
+  border-radius: 40px;
+}
+
+/****************************************************************************************************************/
+/*********************************************** Card ***********************************************************/
+/****************************************************************************************************************/
+
+.card__wrapper {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  flex-wrap: nowrap;
+  overflow: hidden;
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 8px;
+  background-color: transparent;
+  justify-content: flex-start;
+  align-items: flex-start;
+  position: relative;
+  border-radius: 10px;
+}
+
+.card__wrapper:hover {
+  transform: scale(1.05);
+  transition: transform 400ms;
+}
+
+.card__wrapper:hover img {
+  transform: scale(1.4);
+  transition: transform 400ms;
+}
+
+.card__wrapper[data-couchcardsize='lg'][data-couchcardtype='full'] {
+  width: 360px;
+  height: 446px;
+  max-width: 310px;
+  max-height: 446px;
+  min-width: 310px;
+  min-height: 446px;
+}
+
+.card__wrapper[data-couchcardsize='sm'][data-couchcardtype='full'] {
+  height: 308px;
+  width: 244px;
+  max-height: 308px;
+  max-width: 244px;
+  min-height: 308px;
+  min-width: 244px;
+}
+
+.card__wrapper[data-couchcardsize='lg'][data-couchcardtype='mini'] {
+  width: 360px;
+  height: fit-content;
+}
+
+.card__wrapper[data-couchcardsize='sm'][data-couchcardtype='mini'] {
+  width: 244px;
+  height: fit-content;
+}
+
+.card__image-wrapper {
+  overflow: hidden;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.card__image-wrapper[data-couchcardsize='lg'][data-couchcardtype='full'] {
+  height: 246px;
+  min-height: 246px;
+  max-height: 246px;
+}
+
+.card__image-wrapper[data-couchcardsize='sm'][data-couchcardtype='full'] {
+  height: 168px;
+  min-height: 168px;
+  max-height: 168px;
+}
+
+.card__image {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+}
+
+.card__image[data-couchcardsize='lg'][data-couchcardtype='full'] {
+  min-height: 246px;
+  max-height: 246px;
+  height: 246px;
+  aspect-ratio: 16 / 14;
+}
+
+.card__image[data-couchcardsize='sm'][data-couchcardtype='full'] {
+  min-height: 168px;
+  max-height: 168px;
+  height: 168px;
+  aspect-ratio: 16 / 9;
+}
+
+.card__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  box-sizing: border-box;
+}
+
+.card__title[data-couchcardsize='lg'][data-couchcardtype='full'] {
+  color: white;
+  margin-block-end: 0px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.card__text[data-couchcardsize='lg'][data-couchcardtype='full'] {
+  color: rgba(255, 255, 255, 0.7);
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.card__title[data-couchcardsize='sm'][data-couchcardtype='full'] {
+  color: white;
+  margin-block-end: 10px;
+  font-size: 24px;
+  text-align: left;
+  margin-block-end: 6px;
+  margin-block-start: 12px;
+}
+
+.card__text[data-couchcardsize='sm'][data-couchcardtype='full'] {
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.7);
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  margin-block: 6px;
+}
+
+.card__title[data-couchcardsize='lg'][data-couchcardtype='mini'] {
+  color: white;
+  margin-block-end: 10px;
+  font-size: 36px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.card__text[data-couchcardsize='lg'][data-couchcardtype='mini'] {
+  font-family: 'Modern Sans', system-ui;
+  font-weight: 500;
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.7);
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.card__title[data-couchcardsize='sm'][data-couchcardtype='mini'] {
+  color: white;
+  margin-block-end: 10px;
+  font-size: 24px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.card__text[data-couchcardsize='sm'][data-couchcardtype='mini'] {
+  font-family: 'Modern Sans', system-ui;
+  font-weight: 500;
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.7);
+  line-height: 1.25;
+  letter-spacing: 0.04em;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
