feat: Adds doodles images, starts blackthorn article

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -968,9 +968,9 @@ button {
     height: auto;
     width: 100%;
     border-radius: 20px;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
-    aspect-ratio: 16 / 9;
+    aspect-ratio: 16 / 12;
   }
 
   a {
